hphp/hack/test/typecheck/reactive/test_local_reactive.php.exp
File "test_local_reactive.php", line 10, characters 3-13:
This property is being mutated(used as an lvalue)
You cannot set non-mutable object properties in reactive functions (Typing[4202])
